# booking-engine-core

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  Commit.md  README.md  README_EN.md  ROADMAP.md  ROADMAP_EN.md  ideas.md  pyproject.toml  update.md
.env/: pyvenv.cfg
core/: __init__.py
core/application/: __init__.py
core/domain/: __init__.py  exceptions.py
core/sdk/: __init__.py  dto.py  engine.py  events.py  exceptions.py  plugin.py
docs/: ARCHITECTURE.md  Diagram_ASCII.md  Diagram_Mermaid copy.md  Diagram_Mermaid_Booking_Flow.md  core-boundaries.md  public_contracts.md  sdk-boundaries.md
env/: pyvenv.cfg
plugins/: __init__.py
sdk/booking_engine/: availability.py  booking.py  client.py  organization.py  settings.py  user.py
src/auth/: authorization_service.py  permission.py  role.py
src/availability/: availability.py  availability_repository.py  time_slot.py
src/booking/: booking.py
src/booking_engine_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bookings/: booking.py  booking_repository.py  booking_state.py  cancel_booking.py  create_booking.py  reschedule_booking.py
src/context/: context.py  context_registry.py
src/core/: engine.py  request_flow.py
src/extensions/: extension.py  hook_manager.py
src/policies/: booking_policy.py
src/role/: permission.py  role.py
src/rules/: booking_rules.py  rule.py
src/service/: service.py
src/services/: service.py  service_repository.py
src/user/: user.py
src/users/: user.py  user_repository.py
tests/: conftest.py
tests/auth/: test_authorization.py  test_permission.py  (+1 more)
(+66 files in other folders)
