[project]
name = "booking-engine-core"
version = "0.1.0"
description = "Core Booking Engine (Backend, Headless, Context-based)"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]